Bug 73423 - Use ellipsis to indicate characters that are too long. r=weiwei.wu & haoqing.mao

--- a/style/fm.css
+++ b/style/fm.css
@@ -102,6 +102,10 @@ body > section {
   justify-content: center;
 }
 
+#frequency-display {
+  width: 60%;
+}
+
 #frequency-display > div{
   width: 100%;
   height: 2rem;
@@ -109,14 +113,16 @@ body > section {
   font-weight: 400;
   text-align: center;
   color: var(--color-gs60);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-#frequency-display > span {
+#favorite-star {
   display: inline-block;
   position: absolute;
-  top: 0;
-  right: 6.2rem;
-  font-size: 3.2rem;
+  top: -0.3rem;
+  right: 5.5rem;
+  font-size: 3.2rem !important;
 }
 
 #frequency-display > .remove-to-favorites {
@@ -257,10 +263,8 @@ div#frequency-list-container > div {
 
 .frequency-list-item > .frequency-list-frequency {
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .frequency-list-item > i {
